--- a/NadinSoftTask/NadinSoftTask.Host/appsettings.json
+++ b/NadinSoftTask/NadinSoftTask.Host/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Db": "Data Source =.; Initial Catalog = NadinSoftTask;Persist Security Info=True;Integrated Security=true;Connect Timeout=15000;MultipleActiveResultSets=true;TrustServerCertificate=true;"
+  },
+  "HostAddresses": {
+    "HostAddress": "http://localhost:5000/"
+  },
+
   "AllowedHosts": "*"
 }
