--- a/NadinSoftTask/NadinSoftTask.Configuration/NadinSoftTask.Configuration.csproj
+++ b/NadinSoftTask/NadinSoftTask.Configuration/NadinSoftTask.Configuration.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Castle.Windsor" Version="6.0.0" />
+    <PackageReference Include="Castle.Windsor.MsDependencyInjection" Version="4.1.0" />
+  </ItemGroup>
+
 </Project>
