--- a/NadinSoftTask/NadinSoftTask.Infrastructure.Persistence/NadinSoftTask.Infrastructure.Persistence.csproj
+++ b/NadinSoftTask/NadinSoftTask.Infrastructure.Persistence/NadinSoftTask.Infrastructure.Persistence.csproj
@@ -6,4 +6,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.14" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.14">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\NadinSoftTask.DomainModel\NadinSoftTask.DomainModel.csproj" />
+  </ItemGroup>
+
 </Project>
