--- a/NadinSoftTask/NadinSoftTask.Host/appsettings.json
+++ b/NadinSoftTask/NadinSoftTask.Host/appsettings.json
@@ -11,6 +11,11 @@
   "HostAddresses": {
     "HostAddress": "http://localhost:5000/"
   },
-
+  "JwtIssuerOptions": {
+    "SecretKey": "2E26A9E7E50246E7A3957D0F280844EF",
+    "Issuer": "http://localhost:7182",
+    "Audience": "NadinSoft",
+    "ValidTime": 60
+  },
   "AllowedHosts": "*"
 }
