--- a/NadinSoftTask/NadinSoftTask.CommandHandlers/NadinSoftTask.CommandHandlers.csproj
+++ b/NadinSoftTask/NadinSoftTask.CommandHandlers/NadinSoftTask.CommandHandlers.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="MediatR" Version="12.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\NadinSoftTask.Commands\NadinSoftTask.Commands.csproj" />
+    <ProjectReference Include="..\NadinSoftTask.DomainModel\NadinSoftTask.DomainModel.csproj" />
+  </ItemGroup>
+
 </Project>
