--- a/NadinSoftTask/NadinSoftTask.QueryModels.Interfaces/NadinSoftTask.QueryHandlers.csproj
+++ b/NadinSoftTask/NadinSoftTask.QueryModels.Interfaces/NadinSoftTask.QueryHandlers.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NadinSoftTask.QueryModels.Implementations\NadinSoftTask.QueryModels.csproj" />
+  </ItemGroup>
+
 </Project>
